--- a/bj.html
+++ b/bj.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>Codex</title>
-        <link rel="stylesheet" href="codex.css">
+        <link rel="stylesheet" href="bj.css">
     </head>
     <body onload="start()">
         <canvas id="canvas">
         
         </canvas>
-        <script src="codex.js"></script>
+        <script src="bj.js"></script>
 </html>
