--- a/bj.html
+++ b/bj.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Codex</title>
-        <link rel="stylesheet" href="bj.css">
+        <link rel="stylesheet" href="cards.css">
     </head>
     <body onload="start()">
         <canvas id="canvas">
