--- a/bj.html
+++ b/bj.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Codex</title>
+        <title>Blackjack</title>
         <link rel="stylesheet" href="cards.css">
     </head>
     <body onload="start()">
