--- a/bj.html
+++ b/bj.html
@@ -9,5 +9,6 @@
         <canvas id="canvas">
         
         </canvas>
+        <script src="deck.js"></script>
         <script src="bj.js"></script>
 </html>
