--- a/bj.html
+++ b/bj.html
@@ -5,7 +5,7 @@
         <title>Blackjack</title>
         <link rel="stylesheet" href="cards.css">
     </head>
-    <body onload="start()">
+    <body onload="loop()">
         <canvas id="canvas">
         
         </canvas>
