--- a/bj.html
+++ b/bj.html
@@ -11,4 +11,5 @@
         </canvas>
         <script src="deck.js"></script>
         <script src="bj.js"></script>
+        <script src="buttons.js"></script>
 </html>
