--- a/bj.html
+++ b/bj.html
@@ -12,4 +12,5 @@
         <script src="deck.js"></script>
         <script src="bj.js"></script>
         <script src="buttons.js"></script>
+    </body>
 </html>
