not canvas buttons

--- a/bj.html
+++ b/bj.html
@@ -9,6 +9,14 @@
         <canvas id="canvas">
         
         </canvas>
+
+        <div>
+            <button id="stay">Stand</button>
+            <span></span>
+            <button id="more">Hit</button>
+            <button id="nr">Next Round</button>
+        </div>
+        
         <script src="deck.js"></script>
         <script src="bj.js"></script>
         <script src="buttons.js"></script>
